-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.4, 4.8.0
-
None
-
Mac OS X
-
-
4f50be8d1885e685ec8df3796e4156eb015affa7
The new styleName added to QFont for full access to Mac fonts in QTBUG-19366 isn't streamed to or from the QDataStream by QFont. This means that anything that draws such a font to a QPicture won't work correctly. We noticed this in the context of a print preview, but there will be other similar problems.
- relates to
-
QTBUG-22946 A font's HintingPreference is not streamed to/from QPicture
-
- Closed
-
- resulted from
-
QTBUG-19366 Unable to use fonts which have different styles available in Qt
-
- Closed
-