src/corelib/io/qdatastream.h
@@ -89,7 +89,7 @@ public:
         Qt_5_1 = 14,
         Qt_5_2 = 15,
         Qt_5_3 = Qt_5_2,
-        Qt_5_4 = Qt_5_3
+        Qt_5_4 = 16
 #if QT_VERSION >= 0x050500
 #error Add the datastream version for this Qt version
 #endif
