tests/auto/gui/text/qfont/tst_qfont.cpp
@@ -77,7 +77,8 @@ private slots:
     void setFontRaw();
     void italicOblique();
     void insertAndRemoveSubstitutions();
-    void serializeSpacing();
+    void serialize_data();
+    void serialize();
     void lastResortFont();
     void styleName();
     void defaultFamily_data();
@@ -568,7 +569,6 @@ void tst_QFont::insertAndRemoveSubstitutions()
     QVERIFY(QFont::substitutes("bogusfontfamily").isEmpty());
 }
 
-
 static QFont copyFont(const QFont &font1) // copy using a QDataStream
 {
     QBuffer buffer;
@@ -583,29 +583,115 @@ static QFont copyFont(const QFont &font1) // copy using a QDataStream
     return font2;
 }
 
-void tst_QFont::serializeSpacing()
+Q_DECLARE_METATYPE(QDataStream::Version)
+
+void tst_QFont::serialize_data()
 {
-    QFont font;
-    QCOMPARE(font.letterSpacing(), 0.);
-    QCOMPARE(font.wordSpacing(), 0.);
+    QTest::addColumn<QFont>("font");
+    // The version in which the tested feature was added.
+    QTest::addColumn<QDataStream::Version>("minimumStreamVersion");
+
+    QFont basicFont;
+    // Versions <= Qt 2.1 had broken point size serialization,
+    // so we set an integer point size.
+    basicFont.setPointSize(9);
+
+    QFont font = basicFont;
+    QTest::newRow("defaultConstructed") << font << QDataStream::Qt_1_0;
 
     font.setLetterSpacing(QFont::AbsoluteSpacing, 105);
-    QCOMPARE(font.letterSpacing(), 105.);
-    QCOMPARE(font.letterSpacingType(), QFont::AbsoluteSpacing);
-    QCOMPARE(font.wordSpacing(), 0.);
-    QFont font2 = copyFont(font);
-    QCOMPARE(font2.letterSpacing(), 105.);
-    QCOMPARE(font2.letterSpacingType(), QFont::AbsoluteSpacing);
-    QCOMPARE(font2.wordSpacing(), 0.);
+    QTest::newRow("letterSpacing") << font << QDataStream::Qt_4_5;
 
+    font = basicFont;
     font.setWordSpacing(50.0);
-    QCOMPARE(font.letterSpacing(), 105.);
-    QCOMPARE(font.wordSpacing(), 50.);
+    QTest::newRow("wordSpacing") << font << QDataStream::Qt_4_5;
 
-    QFont font3 = copyFont(font);
-    QCOMPARE(font3.letterSpacing(), 105.);
-    QCOMPARE(font3.letterSpacingType(), QFont::AbsoluteSpacing);
-    QCOMPARE(font3.wordSpacing(), 50.);
+    font = basicFont;
+    font.setPointSize(20);
+    QTest::newRow("pointSize") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setPixelSize(32);
+    QTest::newRow("pixelSize") << font << QDataStream::Qt_3_0;
+
+    font = basicFont;
+    font.setStyleHint(QFont::Monospace);
+    QTest::newRow("styleHint") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setStretch(4000);
+    QTest::newRow("stretch") << font << QDataStream::Qt_4_3;
+
+    font = basicFont;
+    font.setWeight(99);
+    QTest::newRow("weight") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setUnderline(true);
+    QTest::newRow("underline") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setStrikeOut(true);
+    QTest::newRow("strikeOut") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setFixedPitch(true);
+    // This fails for versions less than this, as ignorePitch is set to false
+    // whenever setFixedPitch() is called, but ignorePitch is considered an
+    // extended bit, which were apparently not available until 4.4.
+    QTest::newRow("fixedPitch") << font << QDataStream::Qt_4_4;
+
+    font = basicFont;
+    font.setLetterSpacing(QFont::AbsoluteSpacing, 10);
+    // Fails for 4.4 because letterSpacing wasn't read until 4.5.
+    QTest::newRow("letterSpacing") << font << QDataStream::Qt_4_5;
+
+    font = basicFont;
+    font.setRawMode(true);
+    QTest::newRow("rawMode") << font << QDataStream::Qt_1_0;
+
+    font = basicFont;
+    font.setKerning(false);
+    QTest::newRow("kerning") << font << QDataStream::Qt_4_0;
+
+    font = basicFont;
+    font.setStyleStrategy(QFont::NoFontMerging);
+    // This wasn't read properly until 5.4.
+    QTest::newRow("styleStrategy") << font << QDataStream::Qt_5_4;
+
+    font = basicFont;
+    font.setHintingPreference(QFont::PreferFullHinting);
+    // This wasn't read until 5.4.
+    QTest::newRow("hintingPreference") << font << QDataStream::Qt_5_4;
+
+    font = basicFont;
+    font.setStyleName("Regular Black Condensed");
+    // This wasn't read until 5.4.
+    QTest::newRow("styleName") << font << QDataStream::Qt_5_4;
+}
+
+void tst_QFont::serialize()
+{
+    QFETCH(QFont, font);
+    QFETCH(QDataStream::Version, minimumStreamVersion);
+
+    QDataStream stream;
+    const int thisVersion = stream.version();
+
+    for (int version = minimumStreamVersion; version <= thisVersion; ++version) {
+        QBuffer buffer;
+        buffer.open(QIODevice::WriteOnly);
+        stream.setDevice(&buffer);
+        stream.setVersion(version);
+        stream << font;
+        buffer.close();
+
+        buffer.open(QIODevice::ReadOnly);
+        QFont readFont;
+        stream >> readFont;
+        QVERIFY2(readFont == font, qPrintable(QString::fromLatin1("Fonts do not compare equal for QDataStream version ") +
+            QString::fromLatin1("%1:\nactual: %2\nexpected: %3").arg(version).arg(readFont.toString()).arg(font.toString())));
+    }
 }
 
 // QFont::lastResortFont() may abort with qFatal() on QWS/QPA
